add_subdirectory(vm)
add_subdirectory(${OS_DIR})

set(memory_SRC
    address_space.h
    address_space-impl.h
    allocator.h
    handler.h
    handler.cpp
    object_mapped.h
    object_mapped-impl.h
    object_mapped.cpp
    manager.h
    manager-impl.h
    manager.cpp
    memory.h
    object.h
    object-impl.h
    object.cpp
    object_state.h
    object_state-impl.h
    map_object.h
    map_object-impl.h
    map_object.cpp
    protocol.h
    protocol.cpp
    memory.cpp
    allocator/cache.h
    allocator/cache-impl.h
    allocator/cache.cpp
    allocator/slab.h
    allocator/slab-impl.h
    allocator/slab.cpp
    protocols/Gather.h
    protocols/Gather-impl.h
    protocols/Gather.cpp
    protocols/lazy_base.h
    protocols/lazy.h
    protocols/lazy-impl.h
    protocols/lazy.cpp
    protocols/common/block.h
    protocols/common/block-impl.h
    protocols/common/block.cpp
    protocols/common/list_block.h
    protocols/common/list_block-impl.h
    protocols/common/types.h
    protocols/lazy/block.h
    protocols/lazy/block.cpp
    protocols/lazy/lazy_types.h
)

set(memory_DBC
    dbc/manager.h
    dbc/manager.cpp
    dbc/object.h
    dbc/object.cpp
    dbc/object_state.h
    dbc/object_state-impl.h
    protocols/dbc/lazy.h
    protocols/dbc/lazy-impl.h
    protocols/dbc/lazy_base.h
    protocols/dbc/lazy.cpp
    protocols/common/dbc/block.h
    protocols/common/dbc/block.cpp
)

add_gmac_sources(gmac-memory ${memory_SRC} ${memory_DBC})
